--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -1,8 +1,8 @@
-{% if session['role']=='user' %}
+{% if session['role'] == 'user' %}
 <script>
   window.location.href = "/user/dashboard";
 </script>
-{% elif  session['role']=='admin' %}
+{% elif session['role'] == 'admin' %}
 <script>
   window.location.href = "/admin/dashboard";
 </script>
@@ -17,20 +17,169 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    .btn-custom{
-        border-radius: 60px;
+    @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
-    .custom-bg-info{
-        background-color: #1F4590;
+    html, body {
+      display: grid;
+      height: 100%;
+      width: 100%;
+      place-items: center;
+      background-color: #fff;
     }
-    .custom-text-info{
-        color: #1F4590;
+    ::selection {
+      background: #1a75ff;
+      color: #fff;
     }
-    .custom-bg-warning{
-        background-color: #FFA451;
+    .wrapper {
+      overflow: hidden;
+      max-width: 390px;
+      background: #1F4590;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     }
-    .custom-text-warning{
-        color:#FFA451;
+    .wrapper .title-text {
+      display: flex;
+      width: 200%;
+      color: #FFA451;
+    }
+    .wrapper .title {
+      width: 50%;
+      font-size: 35px;
+      font-weight: 600;
+      text-align: center;
+      transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
+    .wrapper .slide-controls {
+      position: relative;
+      display: flex;
+      height: 50px;
+      width: 100%;
+      overflow: hidden;
+      margin: 30px 0 10px 0;
+      justify-content: space-between;
+      border: 1px solid lightgrey;
+      border-radius: 15px;
+    }
+    .slide-controls .slide {
+      height: 100%;
+      width: 100%;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 500;
+      text-align: center;
+      line-height: 48px;
+      cursor: pointer;
+      z-index: 1;
+      transition: all 0.6s ease;
+    }
+    .slide-controls label.signup {
+      color: #1F4590;
+    }
+    .slide-controls .slider-tab {
+      position: absolute;
+      height: 100%;
+      width: 50%;
+      left: 0;
+      z-index: 0;
+      border-radius: 15px;
+      background: #FFA451;
+      transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
+    input[type="radio"] {
+      display: none;
+    }
+    #signup:checked ~ .slider-tab {
+      left: 50%;
+    }
+    #signup:checked ~ label.signup {
+      color: #fff;
+      cursor: default;
+      user-select: none;
+    }
+    #signup:checked ~ label.login {
+      color: #000;
+    }
+    #login:checked ~ label.signup {
+      color: #000;
+    }
+    #login:checked ~ label.login {
+      cursor: default;
+      user-select: none;
+    }
+    .wrapper .form-container {
+      width: 100%;
+      overflow: hidden;
+    }
+    .form-container .form-inner {
+      display: flex;
+      width: 200%;
+    }
+    .form-container .form-inner form {
+      width: 50%;
+      transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
+    .form-inner form .field {
+      height: 50px;
+      width: 100%;
+      margin-top: 20px;
+    }
+    .form-inner form .field input {
+      height: 100%;
+      width: 100%;
+      outline: none;
+      padding-left: 15px;
+      border-radius: 15px;
+      border: 1px solid lightgrey;
+      border-bottom-width: 2px;
+      font-size: 17px;
+      transition: all 0.3s ease;
+    }
+    .form-inner form .field input:focus {
+      border-color: #1a75ff;
+    }
+    .form-inner form .field input::placeholder {
+      color: #999;
+      transition: all 0.3s ease;
+    }
+    form .field input:focus::placeholder {
+      color: #1a75ff;
+    }
+    .form-inner form .pass-link {
+      margin-top: 5px;
+    }
+    .form-inner form .signup-link {
+      text-align: center;
+      margin-top: 30px;
+    }
+    .form-inner form .pass-link a,
+    .form-inner form .signup-link a {
+      color: #fff;
+      text-decoration: none;
+    }
+    .form-inner form .pass-link a:hover,
+    .form-inner form .signup-link a:hover {
+      text-decoration: underline;
+    }
+    .btn-custom {
+      border-radius: 60px;
+    }
+    .custom-bg-info {
+      background-color: #1F4590;
+    }
+    .custom-text-info {
+      color: #1F4590;
+    }
+    .custom-bg-warning {
+      background-color: #FFA451;
+    }
+    .custom-text-warning {
+      color: #FFA451;
     }
     .font-bold {
       font-weight: 700;
@@ -43,168 +192,122 @@
     }
     .navbar-brand {
       align-items: baseline;
+      position: absolute;
+      top: 20px;
+      left: 20px;
     }
-    .border-medium{
-        border-radius: 10px;
+    .border-medium {
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-     <!-- Topbar -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand d-flex " href="/">
-          <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
-      </a>
-      <div></div>
-      <div></div>
-    </nav>
-  
+
 <div class="wrapper">
   {% with messages = get_flashed_messages() %}
   {% if messages %}
-    <div id="flashMessage" style="
-      position: fixed;
-      top: 0;
-      right: 0;
-      z-index: 9999;"
-      class="mt-3 mr-2 alert alert-success alert-dismissible bg-success text-white border-0 fade show"
-      role="alert">
+    <div id="flashMessage" style="position: fixed; top: 0; right: 0; z-index: 9999;" class="mt-3 mr-2 alert alert-success alert-dismissible bg-success text-white border-0 fade show" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
       {{ messages[0] }}
     </div>
   {% endif %}
-{% endwith %}
+  {% endwith %}
 
+  <a class="navbar-brand d-flex" href="/">
+    <h3 class="custom-text-info font-semibold">Eye</h3><p class="custom-text-warning font-semibold">kids</p>
+  </a>
 
-
-      <div class="title-text">
-        <div class="title login">Login</div>
-        <div class="title signup">Registrasi</div>
-      </div>
-      <div class="form-container">
-        <div class="slide-controls">
-          <input type="radio" name="slide" id="login" checked>
-          <input type="radio" name="slide" id="signup">
-          <label for="login" class="slide login">Login</label>
-          <label for="signup" class="slide signup">Daftar</label>
-          <div class="slider-tab"></div>
-        </div>
-        <div class="form-inner">
-          <form action="#" class="login">
-            <pre>
-            </pre>
-            <div class="field">
-              <input type="text" id="username-login" placeholder="Masukan Username" required>
-            </div>
-            <div class="field">
-              <input type="password" id="pswd-login" placeholder="Masukan Password" required>
-            </div>
-            <p class="text-danger" id="msg-login">contoh</p>
-            <div class="field btn">
-              <div class="btn-layer">
-                <button style="display: block; background: #ffffff00; border: none; width: 330px;color: #ffffff; height: 50px; " id="login-button" type="button" >
-                  submit disinii</button></div>
-        <!-- <a href="/app/templates/ganti_password.html" class="text-warning">Lupa Password?</a>  -->
-            <div class="btn btn-custom custom-bg-warning font-semibold">
-              <p><a href="/lupa_password">lupa password</a></p>
-            </div>
-            </div>
-            <div class="signup-link">Buat akun <a href="">Daftar sekarang</a></div>
-          </form>
-          <form action="#" class="signup">
-            <div class="field">
-              <input type="text" id="username-regis" placeholder="Masukan Nama" required>
-            </div>
-            <div class="field">
-              <input type="email" id="email-regis" placeholder="Masukan Email" required>
-            </div>
-            <div class="field">
-              <input type="password" id="pswd-regis" placeholder="Masukan Password" required>
-            </div>
-            <div class="field">
-              <input type="re-password" id="re-pswd-regis" placeholder="Ulangi password" required>
-            </div>
-            <p class="text-danger" id="msg-register">contoh</p>
-            <div class="field btn">
-              <div class="btn-layer">
-                <button style="display: block; background: #ffffff00; border: none; width: 330px;color: #ffffff; height: 50px; "id="daftar-button" type="button"> 
-                  submit disinii</button></div>
-                  </div>
-            <div class="signin-link">Sudah punya akun? <a href="">Login</a></div>
-          </form>
-        </div>
-      </div>
+  <div class="title-text">
+    <div class="title login">Login</div>
+    <div class="title signup">Registrasi</div>
+  </div>
+  <div class="form-container">
+    <div class="slide-controls">
+      <input type="radio" name="slide" id="login" checked>
+      <input type="radio" name="slide" id="signup">
+      <label for="login" class="slide login">Login</label>
+      <label for="signup" class="slide signup">Daftar</label>
+      <div class="slider-tab"></div>
     </div>
-  <script  src="/static/login_register_user/script.js"></script>
+    <div class="form-inner">
+      <form action="#" class="login">
+        <div class="field">
+          <input type="text" id="username-login" placeholder="Masukan Username" required>
+        </div>
+        <div class="field">
+          <input type="password" id="pswd-login" placeholder="Masukan Password" required>
+        </div>
+        <div class="pass-link">
+          <a href="/forgotpassword">Lupa password?</a>
+          <a href="/verif_email">Verifikasi Email</a>
+        </div>
+        <button class="btn btn-custom custom-bg-warning mt-2 w-100" type="submit" value="Daftar" onclick="validateLogin()">Submit</button>
+        <div class="signup-link">
+          Belum punya akun? <a href="">Daftar sekarang</a>
+        </div>
+      </form>
+      <form action="#" class="signup">
+        <div class="field">
+          <input type="text" id="username-daftar" placeholder="Masukan Username" required>
+        </div>
+        <div class="field">
+          <input type="text" id="email-daftar" placeholder="Masukan Email" required>
+        </div>
+        <div class="field">
+          <input type="password" id="pswd-daftar" placeholder="Masukan Password" required>
+        </div>
+          <button class="btn btn-custom custom-bg-warning mt-2 w-100" type="submit" value="Daftar" onclick="validateRegister()">Submit</button>
+      </form>
+    </div>
+  </div>
+</div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script>
-    document.getElementById("msg-login").style.display = "none";
-    document.getElementById("msg-register").style.display = "none";
-    function saveTokenToLocalStorage(token) {
-        localStorage.setItem('jwt_token', token);
+<script>
+  const loginText = document.querySelector(".title-text .login");
+  const loginForm = document.querySelector("form.login");
+  const loginBtn = document.querySelector("label.login");
+  const signupBtn = document.querySelector("label.signup");
+  const signupText = document.querySelector(".title-text .signup");
+  const signupForm = document.querySelector("form.signup");
+
+  signupBtn.onclick = (() => {
+    loginForm.style.marginLeft = "-50%";
+    loginText.style.marginLeft = "-50%";
+  });
+  loginBtn.onclick = (() => {
+    loginForm.style.marginLeft = "0%";
+    loginText.style.marginLeft = "0%";
+  });
+</script>
+
+<script>
+  function validateLogin() {
+    const usernameLogin = document.getElementById('username-login').value;
+    const pswdLogin = document.getElementById('pswd-login').value;
+    if (!usernameLogin || !pswdLogin) {
+      alert("Mohon lengkapi semua field.");
+    } else {
+      alert("Login berhasil!");
     }
-    function kirim(pilihan){
-        if (pilihan==="login"){
-            var uri = "/login/proses";
-            var msg= "msg-login";
-            var data_kirim = JSON.stringify({
-                username:document.getElementById("username-login").value,
-                password:document.getElementById("pswd-login").value
-            });
-            var next_url = "/user/dashboard";
-        }
-        else{
-            var uri = "/bikin_akun_user";
-            var msg = "msg-register";
-            var data_kirim = JSON.stringify({
-                username:document.getElementById("username-regis").value,
-                email:document.getElementById("email-regis").value,
-                password:document.getElementById("pswd-regis").value,
-                re_password:document.getElementById("re-pswd-regis").value
-            });
-            var next_url = "/login";
-        }
-        console.log(data_kirim)
-        $.ajax({
-            url: uri,
-            method: 'POST',
-            contentType: 'application/json',
-            data: data_kirim ,
-            success: function(response) {
-                // Proses respons dari server
-                console.log(response);
-                if(response=="Username and password are required" || response=="Username already exists"){
-                    document.getElementById(msg).innerText = response;
-                    document.getElementById(msg).style.display = "block";
-                } else {
-                    saveTokenToLocalStorage(response);
-                    window.location.href = next_url;
-                }
-            },
-            error: function(xhr) {
-            // Menangani kesalahan
-                var errorMessage = JSON.parse(xhr.responseText);
-                console.log(errorMessage);
-                document.getElementById(msg).innerText = errorMessage.msg;
-                document.getElementById(msg).style.display = "block";
-          }
-        })
+  }
 
-        };
-    document.getElementById("login-button").addEventListener("click", function() { kirim("login"); });
-    document.getElementById("daftar-button").addEventListener("click", function() { kirim("register"); });
-  </script>
-  <script>
-    // Hide the flash message after 1 second
-    setTimeout(function() {
-      $('#flashMessage').fadeOut('fast');
-    }, 1000); // Adjust the timeout value as needed
-  </script>
+  function validateRegister() {
+    const usernameDaftar = document.getElementById('username-daftar').value;
+    const emailDaftar = document.getElementById('email-daftar').value;
+    const pswdDaftar = document.getElementById('pswd-daftar').value;
+    if (!usernameDaftar || !emailDaftar || !pswdDaftar) {
+      alert("Mohon lengkapi semua field.");
+    } else {
+      alert("Registrasi berhasil!");
+    }
+  }
+</script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
 {% endif %}
