--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -63,7 +63,6 @@
         <div class="card-body text-center ">
             <h1 class="font-semibold custom-text-warning">Ganti Password</h1>
             <form class="form text-center" id="form-now">
-                <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" id="password_lama" name="password" placeholder="password lama"><br>
                 <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" id="password_baru" name="password" placeholder="password baru"><br>
                 <button id="submit" type="button" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
                 <h4 class="font-semibold" style="margin-bottom: 0px;">Submit</h4>
@@ -78,27 +77,20 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
      function kirim(){
+        var currentUrl = window.location.href;
+        console.log(currentUrl);
         $.ajax({
-            url: '/ganti_password',
+            url: currentUrl,
             method: 'POST',
             contentType: 'application/json',
             data: JSON.stringify({
-                password_lama:document.getElementById("password_lama").value,
                 password_baru:document.getElementById("password_baru").value
             }),
             success: function(response) {
                 // Proses respons dari server
                 console.log(response);
                 if (response.msg="SUKSES"){
-                  var role = "{{ session['role'] }}"
-                  if(role === "user"){
-                    window.location.href = '/user/dashboard'
-
-                  }
-                  else{
-                    window.location.href = '/admin/dashboard'
-
-                  }
+                  alert("pasword berhasil diubah")
                 }
                 else{
                   alert(response.msg)
